<resources>
    <string name="app_name">To_Do_List</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="start_date">Start Date</string>
    <string name="priority">Priority</string>
    <string name="create_task">Create Task</string>
    <string name="create">Create</string>
    <string name="please_enter_task_name">Please Enter Task Name</string>
    <string name="please_select_start_date">Please Select Start Date</string>
    <string name="please_select_end_date">Please Select End Date</string>
    <string name="end_date">End Date</string>
    <string name="my_tasks">My Tasks</string>
    <string name="create_sub_task">Create Sub Task</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="complete">Complete</string>
    <string name="un_complete">Un Complete</string>
    <string name="phone">Phone</string>
    <string name="verify">Verify</string>
    <string name="sign_up">Sign Up</string>

    <string-array name="task_priorities">
        <item>Low</item>
        <item>Medium</item>
        <item>High</item>
    </string-array>
</resources>