<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        tools:context=".ui.update_task.UpdateTaskFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:minLines="6"
                android:gravity="start|top"
                android:hint="@string/description" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_start_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toStartOf="@id/ti_end_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_start_date"
                android:layout_width="match_parent"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:layout_height="match_parent"
                android:hint="@string/start_date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_end_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ti_start_date"
            app:layout_constraintTop_toBottomOf="@id/ti_description">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_end_date"
                android:layout_width="match_parent"
                android:drawableEnd="@drawable/ic_calendar"
                android:editable="false"
                android:layout_height="match_parent"
                android:hint="@string/end_date" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_priority"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ti_end_date">

            <AutoCompleteTextView
                android:id="@+id/tv_priority"
                android:layout_width="match_parent"
                android:editable="false"

                android:layout_height="match_parent"
                android:hint="@string/priority" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_update_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:insetBottom="0dp"
            android:insetTop="0dp"
            app:cornerRadius="28dp"
            android:text="@string/update"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>