<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginHorizontal="16dp"
      android:layout_marginVertical="6dp"
      app:cardCornerRadius="8dp">

      <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dp"
          >

          <com.google.android.material.button.MaterialButton
              android:id="@+id/tv_status"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:textColor="@color/white"
              android:paddingHorizontal="4dp"
              android:paddingVertical="2dp"
              android:minWidth="0dp"
              android:minHeight="0dp"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintEnd_toEndOf="parent"
              />
          <TextView
              android:id="@+id/tv_name"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              />

          <TextView
              android:id="@+id/tv_description"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_name"
              />


          <TextView
              android:id="@+id/tv_start_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_description"
              />


          <TextView
              android:id="@+id/tv_end_date"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_start_date"
              />

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_delete_task"
              android:layout_width="0dp"
              app:layout_constraintTop_toBottomOf="@id/tv_end_date"
              android:backgroundTint="@color/red"
              android:text="@string/delete"
              android:textAllCaps="false"
              app:cornerRadius="6dp"
              android:layout_marginEnd="6dp"
              app:layout_constraintEnd_toStartOf="@id/btn_edit_task"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_height="wrap_content"/>

          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_edit_task"
              android:layout_width="0dp"
              app:layout_constraintTop_toBottomOf="@id/tv_end_date"
              android:backgroundTint="@color/gray"
              android:text="@string/update"
              android:textAllCaps="false"
              app:cornerRadius="6dp"
              android:layout_marginStart="6dp"
              android:layout_marginEnd="6dp"
              app:layout_constraintStart_toEndOf="@id/btn_delete_task"
              app:layout_constraintEnd_toStartOf="@id/barrier"
              android:layout_height="wrap_content"/>


          <androidx.constraintlayout.widget.Barrier
              android:id="@+id/barrier"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:barrierDirection="start"
              app:constraint_referenced_ids="btn_complete_task,btn_un_complete_task"
              />
          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_complete_task"
              android:layout_width="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_end_date"
              android:backgroundTint="@color/orange"
              android:text="@string/complete"
              android:textAllCaps="false"
              app:cornerRadius="6dp"

              android:layout_marginStart="10dp"
              app:layout_constraintEnd_toEndOf="parent"
              android:layout_height="wrap_content"/>


          <com.google.android.material.button.MaterialButton
              android:id="@+id/btn_un_complete_task"
              android:layout_width="wrap_content"
              app:layout_constraintTop_toBottomOf="@id/tv_end_date"
              android:backgroundTint="@color/green"
              android:text="@string/un_complete"
              android:textAllCaps="false"
              app:cornerRadius="6dp"
              android:layout_marginStart="10dp"

              app:layout_constraintEnd_toEndOf="parent"
              android:layout_height="wrap_content"/>

      </androidx.constraintlayout.widget.ConstraintLayout>
  </androidx.cardview.widget.CardView>
</layout>