<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="16dp"
        tools:context=".ui.sign_up.SignUpFragment">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_phone_number"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>


        <androidx.constraintlayout.widget.Group
            android:id="@+id/digits_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="ti_first_digit,ti_second_digit,ti_third_digit,ti_fourth_digit,ti_fifth_digit,ti_sixth_digit"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_first_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            app:hintEnabled="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ti_second_digit"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:gravity="center"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_second_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            app:hintEnabled="false"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ti_first_digit"
            app:layout_constraintRight_toLeftOf="@id/ti_third_digit"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_second_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:gravity="center"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_third_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            app:hintEnabled="false"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ti_second_digit"

            app:layout_constraintRight_toLeftOf="@id/ti_fourth_digit"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_third_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:gravity="center"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_fourth_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_marginEnd="4dp"
            app:hintEnabled="false"
            android:layout_marginStart="4dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ti_third_digit"

            app:layout_constraintRight_toLeftOf="@id/ti_fifth_digit"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fourth_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="numberSigned"
                android:gravity="center"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_fifth_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginEnd="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ti_fourth_digit"

            app:layout_constraintRight_toLeftOf="@id/ti_sixth_digit"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_fifth_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="numberSigned"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_sixth_digit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintEnabled="false"
            android:layout_marginStart="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/ti_fifth_digit"

            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_sixth_digit"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:inputType="numberSigned"
                android:maxLength="1" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/sign_up"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_verify"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/verify"
            android:visibility="gone"
            app:cornerRadius="28dp"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>